# NGFACO

./: .gitignore  main.py  pyproject.toml
checkpoints/: baseline_cache_6fb874f5cd.pkl  best_model.pt  epoch_10.pt  epoch_11.pt  epoch_12.pt  epoch_13.pt  epoch_14.pt  epoch_15.pt  epoch_2.pt  epoch_3.pt  epoch_4.pt  epoch_5.pt  epoch_6.pt  epoch_7.pt  epoch_8.pt  epoch_9.pt  first.pt  second.pt  third.pt  third200.pt
cvrp/: faco.cpp  faco.py  net.py  test.ipynb  test.py  train.ipynb  train.py  train_ppo.py  utils.py
data/cvrp/: testDataset-100.pt  testDataset-20.pt
tsp/: Makefile  benchmark_faco.py  faco.py  faco_tsp.py  faco_tsp_unified.py  net.py  test.ipynb  test_faco.py  train.py  two_opt.py
tsp/faco/: pyproject.toml  setup.py
tsp/faco/faco_cpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tsp/src/: binding.cpp  faco.cpp  mfaco_train.cpp  mfaco_train.h  progargs.h  setup.py
